# Analisador_Curriculos_IA

./: README.md  db.json  pyproject.toml
analyze/: ai.py  app.py  create_job.py  helper.py  import_cv.py
analyze/drive/: download_cv.py
