[project]
name = "analisador-de-curriculos"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Diego Ribeiro", email = "diegosribeiro@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.37.1,<2.0.0",
    "streamlit-aggrid>=1.0.5,<2.0.0",
    "pandas>=2.2.2,<3.0.0",
    "tinydb>=4.8.0,<5.0.0",
    "pydantic>=2.8.2,<3.0.0",
    "google-api-python-client>=2.142.0,<3.0.0",
    "google-auth-httplib2>=0.2.0,<1.0.0",
    "google-auth-oauthlib>=1.2.1,<2.0.0",
    "langchain-openai>=0.2.0,<0.3.0",
    "openai>=1.47.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "pymupdf>=1.24.9,<2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyze"]


